--- a/pages/ui-icons.html
+++ b/pages/ui-icons.html
@@ -21,7 +21,7 @@
 <script>
   requestAnimationFrame(()=>{
     const icons = [
-      'home','article','search','send','notifications','settings','check','close','arrow-small-down','arrow-small-up'
+      'home','article','search','send','notifications','settings','check','close','arrow-down-small','arrow-up-small'
     ];
 
     const container = document.querySelector('.content .icons');
