--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -11,7 +11,7 @@
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>.</li>
+      <li>icon-combobox - reactive, optional. Default: arrow-dowm-small.</li>
     </ul>
   </div>
 </section>
@@ -21,8 +21,8 @@
   <div class="content-item">
     <div>Default</div>
     <div class="example">
-      <div class="preview" style="height:220px;">
-        <ui-select></ui-select>
+      <div class="preview" style="height:200px;">
+        <ui-select placeholder="Select"></ui-select>
       </div>
       <div class="code">
         <code>
@@ -31,7 +31,5 @@
       </div>
     </div>
   </div>
-<div class="content-item">
-                
-  </div>
+
 </section>
