--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -11,7 +11,7 @@
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>icon-combobox - reactive, optional. Default: arrow-dowm-small.</li>
+      <li>icon-combobox - reactive, optional. Default: arrow-down-small.</li>
     </ul>
   </div>
 </section>
