--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -63,12 +63,12 @@
     <div>Height 24</div>
     <div class="example">
       <div class="preview">
-        <ui-button height="24" aria-text="Settings" icon-leading="settings"></ui-button>
+        <ui-button height="24" text="Settings" icon-leading="settings"></ui-button>
         <ui-button height="24" text="Settings"></ui-button>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button height="24" aria-text="Settings" icon-leading="settings"&gt;&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button height="24" text="Settings" icon-leading="settings"&gt;&lt;/ui-button&gt;</div>
           <div>&lt;ui-button height="24" text="Settings"&gt;&lt;/ui-button&gt;</div>
         </code>
       </div>
@@ -79,12 +79,12 @@
     <div>Height: 32 (default)</div>
     <div class="example">
       <div class="preview">
-        <ui-button aria-text="Settings" icon-leading="settings"></ui-button>
+        <ui-button text="Settings" icon-leading="settings"></ui-button>
         <ui-button text="Settings"></ui-button>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button aria-text="Settings" icon-leading="settings"&gt;&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button text="Settings" icon-leading="settings"&gt;&lt;/ui-button&gt;</div>
           <div>&lt;ui-button text="Settings"&gt;&lt;/ui-button&gt;</div>
         </code>
       </div>
@@ -95,12 +95,12 @@
     <div>Height 40</div>
     <div class="example">
       <div class="preview">
-        <ui-button height="40" aria-text="Settings" icon-leading="settings"></ui-button>
+        <ui-button height="40" text="Settings" icon-leading="settings"></ui-button>
         <ui-button height="40" text="Settings"></ui-button>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-button height="40" aria-text="Settings" icon-leading="settings"&gt;&lt;/ui-button&gt;</div>
+          <div>&lt;ui-button height="40" text="Settings" icon-leading="settings"&gt;&lt;/ui-button&gt;</div>
           <div>&lt;ui-button height="40" text="Settings"&gt;&lt;/ui-button&gt;</div>
         </code>
       </div>
