--- a/pages/ui-listbox.html
+++ b/pages/ui-listbox.html
@@ -1,5 +1,5 @@
 <section class="intro">
-  <h1>Select</h1>
+  <h1>Listbox</h1>
   <div class="description">.</div>
   <ui-divider></ui-divider>
   <div class="info">
@@ -11,7 +11,7 @@
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>icon-combobox - reactive, optional. Default: arrow-down-small.</li>
+      <li>.</li>
     </ul>
   </div>
 </section>
@@ -22,11 +22,15 @@
     <div>Default</div>
     <div class="example">
       <div class="preview">
-        <ui-select placeholder="Select"></ui-select>
+        <ui-listbox>
+          <div role="option">Option 1</div>
+          <div role="option">Option 2</div>
+          <div role="option">Option 3</div>
+        </ui-listbox>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-select&gt;&lt;/ui-select&gt;</div>
+          <div>&lt;ui-listbox&gt;&lt;/ui-listbox&gt;</div>
         </code>
       </div>
     </div>
