--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -25,7 +25,7 @@
         <ui-icon icon="home"></ui-icon>
       </div>
       <div class="toolbar">
-        <ui-button height="28" onclick="changeIconName()" label="Reactivity Test"></ui-button>
+        <ui-button height="28" onclick="changeIconName()" text="Reactivity Test"></ui-button>
       </div>
       <div class="code">
         <code>
