--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -5,7 +5,7 @@
   <div class="info">
     <h2>Usage</h2>
     <ul>
-      <li>At least one of these attributes is required to create a button: label, icon-leading, or icon-trailing.</li>
+      <li>At least one of these attributes is required to create a button: text, icon-leading, or icon-trailing.</li>
       <li>For a button with a single icon, use either icon-leading or icon-trailing.</li>
     </ul>
   </div>
@@ -24,9 +24,9 @@
       <li>text - reactive, optional.
         <br>Continuous string. (nowrap)</li>
       <li>aria-label - dynamic, required.
-        <br>The aria-label is auto-set from label (if present), but can be overridden. If there's no label, it must be set manually.</li>
+        <br>The aria-label is auto-set from text attribute (if present), but can be overridden. If there's no text attribute, aria-label must be set manually.</li>
       <li>icon-leading and icon-trailing - reactive, optional.
-        <br>Define the icons displayed before and after the label, respectively.</li>
+        <br>Define the icons displayed before and after the text, respectively.</li>
       <li>height - static, optional. Default: 24.
         <br>The component's height is measured in pixels. Recommended range: 24 to 40. Even values are preferred.</li>
       <li>disabled - reactive, optional.
