--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -1,6 +1,6 @@
 <section class="intro">
   <h1>Select</h1>
-  <div class="description">.</div>
+  <div class="description">A Select is a component that lets the user choose a single option from a list of multiple choices..</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Features</h2>
