--- a/pages/ui-textarea.html
+++ b/pages/ui-textarea.html
@@ -46,7 +46,7 @@
   </div>
 
   <div class="content-item">
-    <div>Input with placeholder</div>
+    <div>Placeholder</div>
     <div class="example">
       <div class="preview">
         <ui-textarea placeholder="Placeholder"></ui-textarea>
@@ -68,6 +68,20 @@
       <div class="code">
         <code>
           &lt;ui-textarea disabled&gt;&lt;/ui-textarea&gt;
+        </code>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Resize vertical</div>
+    <div class="example">
+      <div class="preview">
+        <ui-textarea resize="vertical"></ui-textarea>
+      </div>
+      <div class="code">
+        <code>
+          &lt;ui-textarea resize="vertical"&gt;&lt;/ui-textarea&gt;
         </code>
       </div>
     </div>
