--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -150,4 +150,19 @@
       </div>
     </div>
   </div>
+
+  <div class="content-item">
+    <div>Text with icons on both sides</div>
+    <div class="example">
+      <div class="preview">
+        <ui-button text="Settings" loading></ui-button> 
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-button text="Settings" icon-leading="settings" icon-trailing="settings"&gt;&lt;/ui-button&gt;</div>
+        </code>
+      </div>
+    </div>
+  </div>
+
 </section>
