--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -152,7 +152,7 @@
   </div>
 
   <div class="content-item">
-    <div>Text with icons on both sides</div>
+    <div>Loading</div>
     <div class="example">
       <div class="preview">
         <ui-button text="Settings" loading></ui-button> 
