--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -155,7 +155,7 @@
     <div>Loading</div>
     <div class="example">
       <div class="preview">
-        <ui-button id="clickMe" onclick="load()" onkeydown="load()" text="Click me" loading></ui-button>
+        <ui-button id="clickMe" onclick="load()" onkeydown="load()" text="Click me"></ui-button>
         <ui-button onclick="reset()" text="Reset"></ui-button>
       </div>
       <div class="code">
@@ -175,12 +175,9 @@
     button.doAction = function(e){
       button.loading = true;
     };
-    //let button = document.getElementById('clickMe');
-    //button.setAttribute('loading','');
   }
 
   function reset(){
     button.loading = false;
-    //button.removeAttribute('loading');
   }
 </script>
