--- a/pages/ui-foundation.html
+++ b/pages/ui-foundation.html
@@ -1,5 +1,5 @@
 <section class="intro">
-  <h1>Core</h1>
+  <h1>Foundation</h1>
   <div class="description">Key fundamental capabilities of the UI library.</div>
   <ui-divider></ui-divider>
   <div class="info">
