--- a/pages/ui-textarea.html
+++ b/pages/ui-textarea.html
@@ -63,11 +63,11 @@
     <div>Disabled</div>
     <div class="example">
       <div class="preview">
-        <ui-textarea disabled></ui-textarea>
+        <ui-textarea placeholder="Disabled" disabled></ui-textarea>
       </div>
       <div class="code">
         <code>
-          &lt;ui-textarea disabled&gt;&lt;/ui-textarea&gt;
+          &lt;ui-textarea placeholder="Disabled" disabled&gt;&lt;/ui-textarea&gt;
         </code>
       </div>
     </div>
