--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -5,7 +5,7 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Font size is "button height / 2", capped between 12px and 16px.</li>
+      <li>Font size is "object height / 2", capped between 12px and 16px.</li>
       <li>A visible outline appears when the component is focused.</li>
     </ul>
   </div>
@@ -25,7 +25,7 @@
       <li>disabled - reactive, optional.
         <br>Controls the disabled state of the component.</li>
       <li>shape - static, optional. Default: rounded.
-        <br>A button can be rounded, pill, or square.</li>
+        <br>A object can be rounded, pill, or square.</li>
     </ul>
   </div>
 </section>
@@ -81,11 +81,11 @@
     <div>Disabled</div>
     <div class="example">
       <div class="preview">
-        <ui-input disabled></ui-input>
+        <ui-input placeholder="Disabled" disabled></ui-input>
       </div>
       <div class="code">
         <code>
-          &lt;ui-input disabled&gt;&lt;/ui-input&gt;
+          &lt;ui-input placeholder="Disabled" disabled&gt;&lt;/ui-input&gt;
         </code>
       </div>
     </div>
