--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -5,25 +5,28 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Font size is "object height / 2", capped between 12px and 16px.</li>
       <li>A visible outline appears when the component is focused.</li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>type - static, optional. Default: "text".</li>
-      <li>placeholder - static, optional.</li>
-      <li>height - static, optional. Default: 40.
-        <br>Component height is measured in pixels. Recommended range: 24 to 40. Even values are preferred.</li>
+      <li>type - static, optional. Default: text.
+        <br>Specifies the input type.</li>
+      <li>value - reactive, optional.
+        <br>Sets the current value of the input.</li>
+      <li>placeholder - static, optional.
+        <br>Text displayed when the input is empty.</li>
       <li>clearable - static, optional.
         <br>Adds a clear button.</li>
       <li>required - static, optional.
         <br>Indicates whether the component is required.</li>
       <li>disabled - reactive, optional.
         <br>Controls the disabled state of the component.</li>
+      <li>size - static, optional. Default: medium.
+        <br>Available values: small, medium, large.</li>
       <li>shape - static, optional. Default: rounded.
-        <br>A object can be rounded, pill, or square.</li>
+        <br>An object's corners can be rounded, pill, or square.</li>
     </ul>
   </div>
 </section>
@@ -33,13 +36,13 @@
     <div>Shape (default: rounded)</div>
     <div class="example">
       <div class="preview">
-        <ui-input shape="rounded" placeholder="shape=&quot;rounded&quot;"></ui-input>
-        <ui-input shape="pill" placeholder="shape=&quot;pill&quot;"></ui-input>
-        <ui-input shape="square" placeholder="shape=&quot;square&quot;"></ui-input>
+        <ui-input></ui-input>
+        <ui-input shape="pill"></ui-input>
+        <ui-input shape="square"></ui-input>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-input shape="rounded"&gt;&lt;/ui-input&gt;</div>
+          <div>&lt;ui-input&gt;&lt;/ui-input&gt;</div>
           <div>&lt;ui-input shape="pill"&gt;&lt;/ui-input&gt;</div>
           <div>&lt;ui-input shape="square"&gt;&lt;/ui-input&gt;</div>
         </code>
@@ -51,15 +54,15 @@
     <div>Height (default: 32)</div>
     <div class="example">
       <div class="preview">
-        <ui-input height="24"></ui-input>
+        <ui-input size="small"></ui-input>
         <ui-input></ui-input>
-        <ui-input height="40"></ui-input>
+        <ui-input size="large"></ui-input>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-input height="24"&gt;&lt;/ui-input&gt;</div>
+          <div>&lt;ui-input size="small"&gt;&lt;/ui-input&gt;</div>
           <div>&lt;ui-input&gt;&lt;/ui-input&gt;</div>
-          <div>&lt;ui-input height="40"&gt;&lt;/ui-input&gt;</div>
+          <div>&lt;ui-input size="large"&gt;&lt;/ui-input&gt;</div>
         </code>
       </div>
     </div>
@@ -94,21 +97,35 @@
   </div>
 
   <div class="content-item">
-    <div>Disabled</div>
+    <div>Input: Disabled + Placeholder</div>
     <div class="example">
       <div class="preview">
         <ui-input placeholder="Disabled" disabled></ui-input>
       </div>
       <div class="code">
         <code>
-          &lt;ui-input disabled&gt;&lt;/ui-input&gt;
+          &lt;ui-input placeholder="Disabled" disabled&gt;&lt;/ui-input&gt;
         </code>
       </div>
     </div>
   </div>
 
   <div class="content-item">
-    <div>Input with clear button</div>
+    <div>Input: Disabled + Value</div>
+    <div class="example">
+      <div class="preview">
+        <ui-input value="Disabled" disabled></ui-input>
+      </div>
+      <div class="code">
+        <code>
+          &lt;ui-input value="Disabled" disabled&gt;&lt;/ui-input&gt;
+        </code>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Clear button</div>
     <div class="example">
       <div class="preview">
         <ui-input clearable></ui-input>
