--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -5,7 +5,7 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li></li>
+      <li>The clickable area of the Clear button is larger than the icon itself to make it easier to click or tap.</li>
     </ul>
   </div>
   <div class="info">
@@ -97,23 +97,6 @@
   </div>
 
   <div class="content-item">
-    <div>Placeholder</div>
-    <div class="example">
-      <div class="preview">
-        <ui-input placeholder="Placeholder"></ui-input>
-      </div>
-      <div class="toolbar">
-        <span>HTML</span>
-      </div>
-      <div class="code">
-        <code>
-          <div>&lt;ui-input placeholder="Placeholder"&gt;&lt;/ui-input&gt;</div>
-        </code>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
     <div>Required</div>
     <div class="example">
       <div class="preview">
@@ -125,6 +108,23 @@
       <div class="code">
         <code>
           <div>&lt;ui-input required&gt;&lt;/ui-input&gt;</div>
+        </code>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Placeholder</div>
+    <div class="example">
+      <div class="preview">
+        <ui-input placeholder="Placeholder"></ui-input>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-input placeholder="Placeholder"&gt;&lt;/ui-input&gt;</div>
         </code>
       </div>
     </div>
