--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -151,7 +151,7 @@
     <div>Disabled + Value</div>
     <div class="example">
       <div class="preview">
-        <ui-input value="Disabled" disabled></ui-input>
+        <ui-input disabled value="Disabled"></ui-input>
       </div>
       <div class="toolbar">
         <span>HTML</span>
@@ -165,10 +165,10 @@
   </div>
 
   <div class="content-item">
-    <div>Info, Error, Success, Warning</div>
+    <div>Accent, Error, Success, Warning</div>
     <div class="example">
       <div class="preview">
-        <ui-input status="info"></ui-input>
+        <ui-input status="accent"></ui-input>
         <ui-input status="error"></ui-input>
         <ui-input status="success"></ui-input>
         <ui-input status="warning"></ui-input>
@@ -178,7 +178,7 @@
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-input status="info"&gt;&lt;/ui-input&gt;</div>
+          <div>&lt;ui-input status="accent"&gt;&lt;/ui-input&gt;</div>
           <div>&lt;ui-input status="error"&gt;&lt;/ui-input&gt;</div>
           <div>&lt;ui-input status="success"&gt;&lt;/ui-input&gt;</div>
           <div>&lt;ui-input status="warning"&gt;&lt;/ui-input&gt;</div>
