--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -37,7 +37,7 @@
     <div>Shape (default: rounded)</div>
     <div class="example">
       <div class="preview">
-        <ui-input></ui-input>
+        <ui-input id="s" value="test"></ui-input>
         <ui-input shape="pill"></ui-input>
         <ui-input shape="square"></ui-input>
       </div>
