--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -29,10 +29,10 @@
         Text displayed when the input is empty. Update via property: component.placeholder = 'Placeholder'.</li>
       <li>clearable - static, optional.<br>
         Adds a clear button to the input.</li>
-      <li>required - static, optional.<br>
+      <li>required - reactive, optional. Default: false.<br>
         Indicates whether the input is required.</li>
-      <li>disabled - reactive, optional.<br>
-        Controls the disabled state of the component and reflects changes both as an attribute and property.</li>
+      <li>disabled - reactive, optional. Default: false.<br>
+        Controls the disabled state of the component.</li>
       <li>size - static, optional. Default: medium.<br>
         Available values: small, medium, large.</li>
       <li>shape - static, optional. Default: rounded.<br>
